--- a/styles/styles.css
+++ b/styles/styles.css
@@ -26,8 +26,8 @@ body {
   min-width: 375px;
   max-width: 1200px;
   margin: 0 auto;
-  font-family: "PT Sans", sans-serif;
   font-size: 18px;
+  font-family: "PT Sans", sans-serif;
   line-height: 21px;
   color: #000000;
   background-color: #F2F2F2;
@@ -156,8 +156,8 @@ a:focus-visible {
 
 .button {
   display: inline-block;
-  font-family: "PT Sans", sans-serif;
   font-size: 16px;
+  font-family: "PT Sans", sans-serif;
   line-height: 20px;
   font-weight: 700;
   text-align: center;
@@ -461,7 +461,7 @@ a:focus-visible {
   font-weight: 400;
   color: #ffffff;
   background-color: #333333;
-  padding: 19px 18px 23px 22px
+  padding: 19px 18px 23px 22px;
   border-radius: 10px;
   box-shadow: 0 15px 30px rgba(0, 0, 0, 0.3);
   transition: all .2s ease-in-out;
@@ -1521,6 +1521,6 @@ a:focus-visible {
 }
 
 .advantages__picture-container {
-  width: 66.6666%
+  width: 66.6666%;
   overflow: hidden;
 }
